# Job-Vacancies-Analyzer-API

./: README.md  pyproject.toml
analyzer-vacancy/: .gitignore  Dockerfile  alembic.ini  cover-letter124678017.txt  cover_letter_124678017.txt  docker-compose.yml  pyproject.toml
analyzer-vacancy/alembic/: env.py
analyzer-vacancy/alembic/versions/: 8afbbba73b45_initial_migration.py
analyzer-vacancy/app/: config.py  main.py  tasks.py
analyzer-vacancy/app/db/: database.py  models.py
analyzer-vacancy/app/routers/: all_vacancies_from_db.py  delete_vacancy.py  export_vacancies.py  get_cover_letter.py  parser.py  vacancies.py
analyzer-vacancy/app/schemas/: vacancy.py
analyzer-vacancy/app/services/: cover_letter.py  delete.py  save_vacancy.py  service_hh.py  vacancy_service.py
analyzer-vacancy/app/tests/: conftest.py  test_operations.py  test_unit_tests.py
