[project]
name = "analyzer-vacancy"
version = "0.1.0"
description = ""
authors = [
    {name = "Anastasia Kamysheva",email = "anastasiia.kamysheva@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic (==1.16.4)",
    "annotated-types (==0.7.0)",
    "apscheduler (==3.11.0)",
    "asyncpg (==0.30.0)",
    "build (==1.3.0)",
    "cachecontrol (==0.14.3)",
    "cachetools (==5.5.2)",
    "certifi (==2025.8.3)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.3)",
    "cleo (==2.1.0)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "crashtest (==0.4.1)",
    "cryptography (==45.0.7)",
    "distlib (==0.4.0)",
    "distro (==1.9.0)",
    "dulwich (==0.22.8)",
    "fastapi (==0.116.1)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.19.1)",
    "findpython (==0.6.3)",
    "google-ai-generativelanguage (==0.6.15)",
    "google-api-core (==2.25.1)",
    "google-api-python-client (==2.181.0)",
    "google-auth (==2.40.3)",
    "google-auth-httplib2 (==0.2.0)",
    "google-genai (==1.32.0)",
    "googleapis-common-protos (==1.70.0)",
    "greenlet (==3.2.4)",
    "grpcio (==1.74.0)",
    "grpcio-status (==1.71.2)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httplib2 (==0.30.0)",
    "httptools (==0.6.4)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.3.0)",
    "jiter (==0.10.0)",
    "keyring (==25.6.0)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.2)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.1)",
    "packaging (==25.0)",
    "pbs-installer (==2025.8.18)",
    "pdfminer-six (==20250506)",
    "pdfplumber (==0.11.7)",
    "pillow (==11.3.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.4.0)",
    "poetry (==2.1.4)",
    "poetry-core (==2.1.3)",
    "proto-plus (==1.26.1)",
    "protobuf (==5.29.5)",
    "pyasn1 (==0.6.1)",
    "pyasn1-modules (==0.4.2)",
    "pycparser (==2.22)",
    "pydantic (==2.11.7)",
    "pydantic-settings (==2.10.1)",
    "pydantic-core (==2.33.2)",
    "pyparsing (==3.2.3)",
    "pypdfium2 (==4.30.0)",
    "pyproject-hooks (==1.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "pywin32-ctypes (==0.2.3)",
    "pyyaml (==6.0.2)",
    "rapidfuzz (==3.13.0)",
    "requests (==2.32.4)",
    "requests-toolbelt (==1.0.0)",
    "rsa (==4.9.1)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.43)",
    "starlette (==0.47.2)",
    "tenacity (==9.1.2)",
    "tomlkit (==0.13.3)",
    "tqdm (==4.67.1)",
    "trove-classifiers (==2025.8.6.13)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "tzdata (==2025.2)",
    "tzlocal (==5.3.1)",
    "uritemplate (==4.2.0)",
    "urllib3 (==2.5.0)",
    "uvicorn (==0.35.0)",
    "virtualenv (==20.32.0)",
    "watchfiles (==1.1.0)",
    "websockets (==15.0.1)",
    "zstandard (==0.24.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pytest-mock (>=3.15.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
trio = "^0.31.0"
pytest-anyio = "^0.0.0"
pytest-asyncio = "^1.1.0"
black = "^25.1.0"

